--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -11,6 +11,35 @@
             margin: 0;
             padding: 0;
         }
+
+        /*css主要部分的样式*/
+        /*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
+        ::-webkit-scrollbar {
+            width: 6px; /*对垂直流动条有效*/
+            height: 6px; /*对水平流动条有效*/
+        }
+
+        /*定义滚动条的轨道颜色、内阴影及圆角*/
+        ::-webkit-scrollbar-track {
+            border-radius: 4px;
+            /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+            /* background-color: rosybrown; */
+        }
+
+        /*定义滑块颜色、内阴影及圆角*/
+        ::-webkit-scrollbar-thumb {
+            border-radius: 8px;
+            background-color: #DDDEE0;
+            /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); */
+        }
+
+        /*定义滑块悬停变化颜色、内阴影及圆角*/
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: #C7C9CC;
+        }
+
+
+
     </style>
 </head>
 <body>
